@@ -19,6 +19,7 @@ Bug fixes:
   layout bug in firefox when displaying tooltips)
 - Fixed the way CMFCalendarToolPatch.py was getting the translation_service
   tool. This has the effect to fix CPSSkins unit tests.
+- Taking advantage of the new centralized CPSI18n.tests.translations module.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in the installer.
